# pyporter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.en.md  README.md  pyporter  pyporter_run  pyproject.toml  setup.py
pyporter/: __init__.py  pyporter.py  utils.py
tests/: TestLicense.json  TestNoHomepageUseHomePage.json  TestNoHomepageUsePackageUrl.json  TestNoHomepageUseProjectUrl.json  TestNoLicense.json  TestNoOSIApproved.json  TestOSIApproved.json  TestPyprojectToml.json  test_get_archive_name.py  test_get_home.py  test_get_license.py  test_get_pyproject_toml.py  test_get_source_url.py  test_get_ver.py  test_transform_module_name.py
